white-morris girl lets talk section

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -102,7 +102,7 @@
             </div>
             <h4 class="sub-heading">Girl Let's Talk Interview</h4>
             <div class="experience">
-                <a href="https://www.youtube.com/watch?v=e2_X3XccPl0" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
+                <a href="https://www.youtube.com/watch?v=Dd55Ivhq1a0" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
                 <br>
                 <br>
                 <h4><strong>Summarized/Paraphrased Q&A</strong></h4>
@@ -167,8 +167,8 @@
                 point where we are graduating kids who can’t even read.
                 <br>
                 <br>
-                
-                
+
+            </div>  
     </div>
  </div>   
 </body>
