--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -107,6 +107,76 @@
                 When asked about equity, White-Morris spoke about the public needing to acknowledge the topic, needing real answers on 
                 how to deal with it, and educating lawmakers about the topic.
             </div>
+            <h4 class="sub-heading">Girl Let's Talk Interview</h4>
+            <div class="experience">
+                <a href="https://www.youtube.com/watch?v=Dd55Ivhq1a0" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
+                <br>
+                <br>
+                <h4><strong>Summarized/Paraphrased Q&A</strong></h4>
+                To note: A "general discussion point" is a summarized part of the video that might not have come from a direct question and 
+                answer format, but part of a tangent or general discussion.
+                <br>
+                <br>
+                <br>
+                1. Host: Tell us who you are.
+                <br>
+                <br>
+                Smith: Community advocate, union member, sorority member, a leader. Born and raised in Bridgeton. Proud to be her 
+                father’s daughter, who was very active in the community. Bridgeton High School graduate, 2002. Graduate of Delaware 
+                State University. Has a criminal justice degree. Graduate of Wilmington University with a masters in administration of 
+                justice with a concentration in homeland security. One of my motivations for running is that being a person of color, 
+                my parents did not have the same opportunities that I have, including getting an advanced education. So they wanted to 
+                make sure I had an education and now I want to follow through on that vision… and I believe that’s why I am also an 
+                educator today. I worked for Bridgeton public schools for 15 years. Through my experience as an attendance officer, I 
+                realized how broken our community is and that we needed people to go above and beyond normal expectations. I remember
+                being 9 or 10 years old and telling my mom that I wanted to help people. Through my years of being involved in 
+                community affairs, I have a network where I can help get things done by making some phone calls and sending some text 
+                messages. I want to send a positive ‘can-do’ message through the community. I am a director of early childhood education. 
+                Feels strongly about her faith and using it to move forward. I had a very humble way of accepting my nomination as a party 
+                candidate for assembly, but when I got my father’s approval I knew it was the right thing.
+                <br>
+                <br>
+                <br>
+                2. Host: At what point did you realize you were going to run for office? 
+                <br>
+                <br>
+                White-Morris: I was tired of going to my student’s funerals. This person got shot, this one has been killed… when is it 
+                finally going to be enough? There is a lot of talk on facebook, and it lasts for a day or two, but then we go right 
+                back to our old ways. When are we going to take back our village?
+                <br>
+                <br>
+                <br>
+                3. General discussion point: We have to show our children that split second decisions have 
+                consequences, because our families and communities are setting the bad example that even if you do something wrong and 
+                go through the system, the children get the impression that it’s ok, without realizing that the consequences will 
+                follow them.
+                <br>
+                <br>
+                <br>
+                4. Host: How do we get the basic respect factor instilled back into our kids?
+                <br>
+                <br>
+                White-Morris: Government has taken away power. We have so many government systems set in place that they are being 
+                abused and parents are afraid of doing or saying the wrong thing, which could then be used against the parents for 
+                punishment.
+                <br>
+                <br>
+                <br>
+                5. General discussion point: COVID exposed that we have been programmed to only go to work to keep a roof over our 
+                heads, and so we’ve left the parenting up to the schools. By the time we get home from work, we are too tired to do 
+                anything else. We’re not checking homework, and sometimes the kids aren’t even getting homework. It has gotten to the 
+                point where we are graduating kids who can’t even read.
+                <br>
+                <br>
+                White-Morris: As an early childhood educator, I have seen all kinds of problems with kids regarding mental health 
+                problems, autism, etc. And then when the parents come in, I have seen some teachers with the attitude that it’s not 
+                their job to help the parents, which I don’t think is right. 
+                <br>
+                <br>
+                Host: But we also have to allow the teachers to give the parents criticism. For example, if a teacher tells a parent 
+                that their child is misbehaving in school, the parents should listen and try to understand that their child might 
+                actually be misbehaving, instead of the parents getting defensive.
+            </div>
     </div>
  </div>   
 </body>
