agenda updates for bonner and white-morris

--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -70,6 +70,7 @@
                     <li>Funding so teachers have adequate teaching supplies</li>
                     <li>Increase salaries for teachers</li>
                     <li>School budget oversight</li>
+                    <li>Improve school curriculum and address homelessness</li><a href="https://drive.google.com/file/d/1UQBGWS9pewX6pP9jFwWZBF9VX-OnXSFB/view?fbclid=IwAR0q5pXGJF6CatS_GsefaDlbLKxQUqGxgPEjhimybI5Kn3rtsP5vmfT2SJw" target="_blank" rel="noopener noreferrer" class="website-link">Google Drive Video</a>
                 </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
