temporary placement of timeline link on about page

--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -49,6 +49,8 @@
             <h2 class="our-mission-heading">Our Mission</h2>
             <div class="our-mission-content">
                 <div class="content-1">
+                    <li class="link"><a href="timeline.html">Timeline</a></li>
+
                     As a citizen who started with genuine curiosity about our upcoming election candidates,
                 I found myself increasingly concerned about the state of our local elections. The
                 concern eventually boils down to: Our citizens should be ‘fully informed’ rather than
