timeline debug attempt 2

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="menu-wrap">
+    <!-- <div class="menu-wrap">
         <input type="checkbox" autocomplete='off' class="toggler">
         <div class="hamburger">
             <div></div>
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
     
     <div class="container">
