--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="timeline-style.css">
     <title>Custom Timeline</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
     <!-- Event details will appear here -->
 </div>
 
-<script src="script.js"></script>
+<script src="timeline.js"></script>
 </body>
 </html>
     
