added brief description section for events

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -12,14 +12,17 @@
     <div class="timeline-event" onclick="displayEventInfo('event1')">
         <div class="timeline-date">2000</div>
         <div class="timeline-dot"></div>
+        <div class="timeline-description">Event 1 Description</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event2')">
         <div class="timeline-date">2005</div>
         <div class="timeline-dot"></div>
+        <div class="timeline-description">Event 2 Description</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event3')">
         <div class="timeline-date">2010</div>
         <div class="timeline-dot"></div>
+        <div class="timeline-description">Event 2 Description</div>
     </div>
     <!-- Add more events as needed -->
 </div>
