--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -10,9 +10,9 @@
 
 <div id="timeline-container">
     <div class="timeline-event" onclick="displayEventInfo('event1')">
-        <div class="timeline-date">2000</div>
+        <div class="timeline-date">June 2nd - June 6th</div>
         <div class="timeline-dot"></div>
-        <div class="timeline-description">Event 1 Description</div>
+        <div class="timeline-description">Received Sample Primary Ballot</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event2')">
         <div class="timeline-date">2005</div>
@@ -20,9 +20,9 @@
         <div class="timeline-description">Event 2 Description</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event3')">
-        <div class="timeline-date">2010</div>
+        <div class="timeline-date">November 7th</div>
         <div class="timeline-dot"></div>
-        <div class="timeline-description">Event 2 Description</div>
+        <div class="timeline-description">Casted a Partially Informed Vote</div>
     </div>
     <!-- Add more events as needed -->
 </div>
