--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -15,11 +15,16 @@
         <div class="timeline-description">Received Sample Primary Ballot</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event2')">
-        <div class="timeline-date">2005</div>
+        <div class="timeline-date">June 3rd - July 3rd (roughly)</div>
         <div class="timeline-dot"></div>
-        <div class="timeline-description">Event 2 Description</div>
+        <div class="timeline-description">Attempt Contact with Candidates and the Daily Journal</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event3')">
+      <div class="timeline-date">July 6th</div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-description">Make Contact with the Mayor</div>
+  </div>
+    <div class="timeline-event" onclick="displayEventInfo('event4')">
         <div class="timeline-date">November 7th</div>
         <div class="timeline-dot"></div>
         <div class="timeline-description">Casted a Partially Informed Vote</div>
