5th event added to timeline

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -23,8 +23,13 @@
       <div class="timeline-date">July 6th</div>
       <div class="timeline-dot"></div>
       <div class="timeline-description">Make Contact with the Mayor</div>
-  </div>
+    </div>
     <div class="timeline-event" onclick="displayEventInfo('event4')">
+      <div class="timeline-date">July 6th - September 6th (roughly)</div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-description">Navigating the Labyrinth</div>
+    </div>
+    <div class="timeline-event" onclick="displayEventInfo('event5')">
         <div class="timeline-date">November 7th</div>
         <div class="timeline-dot"></div>
         <div class="timeline-description">Casted a Partially Informed Vote</div>
