final content on timeline for now

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -30,6 +30,16 @@
       <div class="timeline-description">Navigating the Labyrinth</div>
     </div>
     <div class="timeline-event" onclick="displayEventInfo('event5')">
+      <div class="timeline-date">September (roughly)</div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-description">Canraying in the Coal Mine</div>
+    </div>
+    <div class="timeline-event" onclick="displayEventInfo('event6')">
+      <div class="timeline-date">October (roughly)</div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-description">Height of Election Season</div>
+    </div>
+    <div class="timeline-event" onclick="displayEventInfo('event7')">
         <div class="timeline-date">November 7th</div>
         <div class="timeline-dot"></div>
         <div class="timeline-description">Casted a Partially Informed Vote</div>
