zig zag fix attempt

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -9,40 +9,60 @@
 <body>
 
 <div id="timeline-container">
+    
     <div class="timeline-event" onclick="displayEventInfo('event1')">
-        <div class="timeline-date">June 2nd - June 6th</div>
-        <div class="timeline-dot"></div>
-        <div class="timeline-description">Received Sample Primary Ballot</div>
-    </div>
-    <div class="timeline-event" onclick="displayEventInfo('event2')">
-        <div class="timeline-date">June 3rd - July 3rd (roughly)</div>
-        <div class="timeline-dot"></div>
-        <div class="timeline-description">Attempt Contact with Candidates and the Daily Journal</div>
-    </div>
-    <div class="timeline-event" onclick="displayEventInfo('event3')">
-      <div class="timeline-date">July 6th</div>
       <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">June 2nd - June 6th</div>
+      <div class="timeline-description">Received Sample Primary Ballot</div>
+    </div>
+
+    <div class="timeline-event" onclick="displayEventInfo('event2')">
+      <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">June 6th - July 3rd (roughly)</div>
+      <div class="timeline-description">Attempt Contact with Candidates and the Daily Journal</div>
+    </div>
+
+    <div class="timeline-event" onclick="displayEventInfo('event3')">
+      <div class="timeline-date"></div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-description"></div>
+    </div>
+
+    <div class="timeline-event" onclick="displayEventInfo('event3')">
+      <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">July 6th</div>
       <div class="timeline-description">Make Contact with the Mayor</div>
     </div>
+
     <div class="timeline-event" onclick="displayEventInfo('event4')">
-      <div class="timeline-date">July 6th - September 6th (roughly)</div>
       <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">July 6th - September 6th (roughly)</div>
       <div class="timeline-description">Navigating the Labyrinth</div>
     </div>
+
     <div class="timeline-event" onclick="displayEventInfo('event5')">
-      <div class="timeline-date">September (roughly)</div>
       <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">September (roughly)</div>
       <div class="timeline-description">Canraying in the Coal Mine</div>
     </div>
+
     <div class="timeline-event" onclick="displayEventInfo('event6')">
-      <div class="timeline-date">October (roughly)</div>
       <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">October (roughly)</div>
       <div class="timeline-description">Height of Election Season</div>
     </div>
+
     <div class="timeline-event" onclick="displayEventInfo('event7')">
-        <div class="timeline-date">November 7th</div>
-        <div class="timeline-dot"></div>
-        <div class="timeline-description">Casted a Partially Informed Vote</div>
+      <div class="timeline-dot"></div>
+      <div class="timeline-line"></div> <!-- New Line Element -->
+      <div class="timeline-date">November 7th</div>
+      <div class="timeline-description">Casted a Partially Informed Vote</div>
     </div>
     <!-- Add more events as needed -->
 </div>
