more timeline edit attempts

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -57,7 +57,7 @@
         
     </div>
 
-    <div id="eventInfo">
+    <div class="eventInfo" id="eventInfo">
         <!-- Event details will appear here -->
     </div>
 
