see if dot is centered

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="eventInfo" id="eventInfo">
-        <!-- Event details will appear here -->
+        <p><center>Click the blue dots for a longer explanation of each event.</center></p>
     </div>
 
     <script src="timeline.js"></script>
