--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -129,6 +129,8 @@
         <div id="eventModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
+                <h2 id="modalDate">Event Date</h2> <!-- Placeholder for the date header -->
+                <h3 id="modalDescription">Event Description</h3> <!-- Placeholder for the description header -->
                 <p id="eventDetails"></p>
             </div>
         </div>
