--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="timeline-style.css">
+      <link href="../../style.css" rel="stylesheet" />
       <title>Custom Timeline</title>
   </head>
 
