attempting to add transitions to modals

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -39,7 +39,7 @@
         feeling as though they may already be covering the election, I decided to try contacting our 
         local paper, The Daily Journal. So I drove over to their building and found it vacant. Turns
         out they have been absorbed by a parent company. So I looked online and tried contacting 
-        all their email addresses and phone numbers. Also no response">
+        all their email addresses and phone numbers. Also no response.">
           <div class="timeline-date">June 6th - July 3rd</div>  
           <div class="timeline-dot"></div>
           <div class="timeline-description">Attempt Contact with Candidates and the Daily Journal</div>
@@ -74,7 +74,7 @@
         learn about county issues. So I started going to these meetings and other county events, 
         slowly piecing some things together regarding local politics and the candidates. The 
         democrats and republicans eventually put some information about their candidates on their 
-        party sites, but much of it was surface level">
+        party sites, but much of it was surface level.">
           <div class="timeline-date">July 6th – September 3rd (roughly)</div> 
           <div class="timeline-dot"></div>
           <div class="timeline-description">Navigating the Labyrinth</div>
