--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -6,11 +6,45 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="timeline-style.css">
       <link href="../../style.css" rel="stylesheet" />
-      <title>Custom Timeline</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
+      <title>Inform the Vote</title>
   </head>
 
 
   <body>
+
+    <div class="menu-wrap">
+      <input type="checkbox" autocomplete='off' class="toggler">
+      <div class="hamburger">
+          <div></div>
+      </div>
+      <div class="menu">
+          <div>
+              <div>
+                  <ul class="links">
+                    <li class="link"><a href="../index.html">Home</a></li>
+                    <li class="link"><a href="cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
+                    <li class="link"><a href="cc-elections/cc_election_issues.html">Issues</a></li>
+                    <li class="link"><a href="vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                    <li class="link"><a href="vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
+                    <li class="link"><a href="cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                    <li class="link"><a href="get-involved.html">Get Involved</a></li>
+                    <li class="link"><a href="events.html">Events</a></li>
+                    <li class="link"><a href="candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                    <li class="link"><a href="about.html">About</a></li>
+                    <li class="link"><a href="contact.html">Contact</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+    </div>
+
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div id="timeline-container">
         
