--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -47,7 +47,22 @@
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div class="main-content-box-with-shadow">
-      <h4 class="ms-heading">Election Campaign Timeline</h4>
+      <h1 class="get-involved-h1"><center>Election Campaign Timeline</center></h1>
+                <h3 class="get-involved-intro-heading">Timeline Introduction</h3>
+                <div class="get-involved-intro-content">
+                  Below is a list of phases and events that I experienced during this year's 5 month long election campaign. This is 
+                  meant to help show the progression over a lengthy period of time of someone who was just an average citizen curious 
+                  about the candidates. The first phase was just receiving the ballot on June 2nd and taking some time over the weekend 
+                  to find information. The second phase over the next month was realizing how big a problem accessing information about 
+                  the candidates was. The third phase from mid-late summer was realizing how in-depth the process is to gather and make 
+                  sense of the basic information. The fourth phase at the beginning of autumn was starting to make my voice clearly heard 
+                  that there was a problem gathering basic, let alone comprehensive, candidate information. The fifth and final phase was 
+                  verifying that not only was accessing comprehensive information difficult, but by being the guy who regularly shows up 
+                  seeking that information by asking reasonable questions has gotten me pegged as the guy who 'isn't welcome here, because 
+                  you ask too many questions. You should have all the info you need by now.' And so I am left to make a partially informed 
+                  vote.
+                </div>
+      <h4 class=""></h4>
         <div id="timeline-container">
             
           <div class="ms-content">
