cut the timeline intro down for visual purposes

--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -50,17 +50,11 @@
       <h1 class="get-involved-h1"><center>Election Campaign Timeline</center></h1>
                 <h3 class="get-involved-intro-heading">Timeline Introduction</h3>
                 <div class="get-involved-intro-content">
-                  Below is a list of phases and events that I experienced during this year's 5 month long election campaign. This is 
-                  meant to help show the progression over a lengthy period of time of someone who was just an average citizen curious 
-                  about the candidates. The first phase was just receiving the ballot on June 2nd and taking some time over the weekend 
-                  to find information. The second phase over the next month was realizing how big a problem accessing information about 
-                  the candidates was. The third phase from mid-late summer was realizing how in-depth the process is to gather and make 
-                  sense of the basic information. The fourth phase at the beginning of autumn was starting to make my voice clearly heard 
-                  that there was a problem gathering basic, let alone comprehensive, candidate information. The fifth and final phase was 
-                  verifying that not only was accessing comprehensive information difficult, but by being the guy who regularly shows up 
-                  seeking that information by asking reasonable questions has gotten me pegged as the guy who 'isn't welcome here, because 
-                  you ask too many questions. You should have all the info you need by now.' And so I am left to make a partially informed 
-                  vote.
+                  Below is a list of phases and events that I experienced during this year's 5 month long election campaign. During these 
+                  phases I went from a curious citizen, to a concerned citizen, to slowly learning, to voicing my concern, and finally 
+                  a quasi-citizen journalist who was ultimately told by one candidate at a public meet and greet that 'you're not welcome 
+                  here, you ask too many questions. You ought to have enough info by now.' So now, after months of pro-active searching, I 
+                  am a partially informed voter.
                 </div>
       <h4 class=""></h4>
         <div id="timeline-container">
