--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -56,6 +56,7 @@
         <div class="website">
             <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
             <a href="https://www.facebook.com/larae.smith.125/?locale=et_EE" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=61558568992749" target="_blank" rel="noopener noreferrer" class="website-link">Perella-Smith Facebook</a>
             Interview on <a href="https://www.facebook.com/QBCSJ/videos/183645471369458" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
         <h3 class="sub-heading">individual agenda</h3>
