--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                         <!--<li class="link"><a href="child_pages/timeline.html">Timeline</a></li>-->
                         <li class="link"><a href="child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                         <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
-                        <li class="link"><a href="child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                        <!-- <li class="link"><a href="child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">School Board Issues</a></li>
-                        <li class="link"><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                        <li class="link"><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
-                        <li class="link"><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                        <!-- <li class="link"><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                         <li class="link"><a href="child_pages/about.html">About</a></li>
                         <li class="link"><a href="child_pages/contact.html">Contact</a></li>
                     </ul>
