--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -23,7 +23,7 @@
                 <div>
                     <ul class="links">
                         <li class="link"><a href="../../index.html">Home</a></li>
-                        <li class="link"><a href="../cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="../cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary Elections</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_issues.html">County Issues</a></li>
                         <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
@@ -46,7 +46,7 @@
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h4>DEMOCRATIC PRIMARY</h4>
-            <h6>COUNTY CLERK 2024</h6>  
+            <h6>COUNTY COMMISSIONER 2024</h6>  
         </div>
         
         <div id="democratic-candidates">
