--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -25,6 +25,7 @@
                         <li class="link"><a href="../../index.html">Home</a></li>
                         <li class="link"><a href="../cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary Elections</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_issues.html">County Issues</a></li>
+                        <li class="link"><a href="../cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
                         <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
                         <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
