--- a/child_pages/cc-elections/us_repubprimary_senate.html
+++ b/child_pages/cc-elections/us_repubprimary_senate.html
@@ -22,7 +22,7 @@
             <div>
                 <div>
                     <ul class="links">
-                        <li class="link"><a href="../../index.html">Home</a></li>
+                        <li class="link"><a id="home" href="index.html">Home</a></li>
                         <li class="link"><a href="../cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary Elections</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_issues.html">County Issues</a></li>
                         <li class="link"><a href="../cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
