--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -20,14 +20,18 @@
                     <div>
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_clerk_2024.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
+                            <!-- <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                             <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
-                            <li class="link"><a href="../../../child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                            <!-- <li class="link"><a href="../../../child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
                             <li class="link"><a href="../../../child_pages/contact.html">Contact</a></li>
                         </ul>
@@ -45,8 +49,8 @@
             <div class="position">Cumberland County Commissioner</div>
         </div>
         <div class="incum-or-challenger">
-            <div class="incumbent active">Incumbent</div>
-            <div class="challenger inactive">Challenger</div> 
+            <div class="incumbent inactive">Incumbent</div>
+            <div class="challenger active">Challenger</div> 
         </div>
     </div>
     <div class="candidate-pic-box">
