--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -20,14 +20,18 @@
                     <div>
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_clerk_2024.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
+                            <!-- <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                             <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
-                            <li class="link"><a href="../../../child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                            <!-- <li class="link"><a href="../../../child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
                             <li class="link"><a href="../../../child_pages/contact.html">Contact</a></li>
                         </ul>
@@ -51,14 +55,20 @@
     <div class="candidate-pic-box">
         <img class="cover" src="../../../assets/candidates/smith.jpg" class="candidate-pic">
     </div>
+
+
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <!-- <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a> -->
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
             <a href="https://www.facebook.com/larae.smith.125/?locale=et_EE" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://www.facebook.com/profile.php?id=61558568992749" target="_blank" rel="noopener noreferrer" class="website-link">Perella-Smith Facebook</a>
             Interview on <a href="https://www.facebook.com/QBCSJ/videos/183645471369458" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
+
+        <br>
+        <br>
+
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
                 Supports Planned Parenthood. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
@@ -66,17 +76,29 @@
                 Supports the black caucuses of the democrat party. Reposted on <a href="https://www.facebook.com/njyoungdems/posts/pfbid0w4svZbLLZNgLdExKmHLsY46uriD3yPjzexzw64Axrne3C4Z23ctu4mH4oimGq4mDl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
 
             </div>
+
+            <br>
+            <br>
+
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
                 Support Senior housing and Healthcare Services.
                 Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.
                 Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce cost and tax burden of facility.
             </div>
+
+            <br>
+            <br>
+
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
             </div>
+
+            <br>
+            <br>
+
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 <p>Since 2007, La Rae has worked in education with the Commercial Township Board of Education.  She is currently a Social Service Coordinator 
@@ -88,6 +110,10 @@
                 recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in this great community that she loves.</p>
                 
             </div>
+
+            <br>
+            <br>
+
             <h4 class="sub-heading">Candidates Forum Responses</h4>
             <div class="experience">
                 When asked what makes her the most qualified candidate for Commissioner at the Candidates Forum held at Bridgeton High 
@@ -101,6 +127,10 @@
                 Inform the Vote would like to note that Smith left the Candidates Forum approximately halfway through for an official 
                 public duty (maybe School Board, but we're not sure).
             </div>
+
+            <br>
+            <br>
+            
             <h4 class="sub-heading">Girl Let's Talk Interview</h4>
             <div class="experience">
                 <a href="https://www.youtube.com/watch?v=Dd55Ivhq1a0" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
