--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -20,7 +20,7 @@
                     <div>
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioner Democrat Primary</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
@@ -130,7 +130,7 @@
 
             <br>
             <br>
-            
+
             <h4 class="sub-heading">Girl Let's Talk Interview</h4>
             <div class="experience">
                 <a href="https://www.youtube.com/watch?v=Dd55Ivhq1a0" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
