--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul class="links">
                         <li class="link"><a id="home" href="index.html">Home</a></li>
                         <!--<li class="link"><a href="child_pages/timeline.html">Timeline</a></li>-->
-                        <li class="link"><a href="child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary Elections</a></li>
+                        <li class="link"><a href="child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioner Democrat Primary</a></li>
                         <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
                         <li class="link"><a href="child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
                         <li class="link"><a href="child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
