name updates on repub senate primary pages

--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -43,7 +43,7 @@
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
-        <h2>Curtis Bashaw</h2>
+        <h2>Justin Murphy</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">US Senator - NJ</div>
