--- a/child_pages/cc-elections/us_president_demprimary.html
+++ b/child_pages/cc-elections/us_president_demprimary.html
@@ -95,7 +95,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/laspata.html">Joseph R</a>
+                            <a href="Candidates/biden.html">Joseph R</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/laspata.html">Biden</a>
+                            <a href="Candidates/biden.html">Biden</a>
                         </div>
                     </div>
 
@@ -138,7 +138,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/laspata.html">Terrisa</a>
+                            <a href="Candidates/bukovinac.html">Terrisa</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/laspata.html">Bukovinac</a>
+                            <a href="Candidates/bukovinac.html">Bukovinac</a>
                         </div>
                     </div>
 
