start of updating home page

--- a/index.html
+++ b/index.html
@@ -79,16 +79,39 @@
             <h4 class="ss-heading">Site Sections</h4>
             <div class="ss-content">
                 <ul class="ss-ol">
-                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_candidates.html">Cumberland County Election</a></strong> Navigate an interactive primary ballot that provides concise but
+
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong> 
+                        Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
+
                     <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
                         straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
-                    <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Election</a></strong> Navigate an interactive primary ballot that provides concise but
+
+                        <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong> 
+                            Navigate an interactive primary ballot that provides concise but
+                            comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                            policy positions into an easily understandable format.</li>
+
+                            <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong> 
+                                Navigate an interactive primary ballot that provides concise but
+                                comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                                policy positions into an easily understandable format.</li>
+
+                                <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong> 
+                                    Navigate an interactive primary ballot that provides concise but
+                                    comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                                    policy positions into an easily understandable format.</li>
+
+                                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong> 
+                                        Navigate an interactive primary ballot that provides concise but
+                                        comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
+                                        policy positions into an easily understandable format.</li>
+                    <!-- <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Election</a></strong> Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
                     <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
-                        straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
+                        straightforward manner, allowing you to quickly gauge where each candidate stands.</li> -->
                     <li class="ss-li"><strong><a href="child_pages/get-involved.html">Get Involved</a></strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
                         consolidated calendar guides you to meaningful opportunities for community and
                         political engagement.</li>
